--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -118,7 +118,7 @@
 
 	"page_options_suspend_local_files": { "message": "Suspend file:// tabs" },
 	"page_options_suspend_local_files_permissions": {
-		"message": "Option \"Allow access to file URLs\" must be enabled on the extension page."
+		"message": "Option \"Allow access to file URLs\" must be enabled on the Chrome extension page.<br>Warning: changing this option will close all suspended pages of this extension. Back up session before doing this."
 	},
 
 	"page_options_suspend_offline": { "message": "Suspend tabs when offline" },
