--- a/public/_locales/tr/messages.json
+++ b/public/_locales/tr/messages.json
@@ -126,7 +126,12 @@
 	"page_options_never_suspend_unsaved_data_permissions": { "message": "Tüm URL'lere erişim ve komut dosyası çalıştırma izni gerektirir." },
 	"page_options_never_suspend_when_power_on": { "message": "Güç kaynağına bağlıyken sekmeleri asla askıya alma" },
 	"page_options_white_list": { "message": "Aşağıdaki listedeki URL'lere sahip sekmeleri asla askıya alma:" },
-	"page_options_white_list_hint": { "message": "Her öğe yeni bir satırda.\nÖrnek:\n\tgithub.com\n\tyoutube.com/watch" },
+	"page_options_white_list_hint": {
+      "message": "Her öğe yeni bir satırda.\nÖrnek:$EXAMPLES$",
+      "placeholders": {
+        "examples": { "content": "$1", "example": "\n\tgithub.com\n\tyoutube.com/watch\n\t*.example.com/some/*/path/\n\t/^([a-z0-9-]+\\.)*example\\.com$/i" }
+      }
+    },
 	"page_options_block_suspended": { "message": "Askıya alınmış sekmeler" },
 	"page_options_restore_scroll_position": { "message": "Kaydırma konumunu geri yükle ve sekme simgelerini karart" },
 	"page_options_restore_scroll_permissions": { "message": "Tüm URL'lere erişim ve komut dosyası çalıştırma izni gerektirir." },
