--- a/public/_locales/zh_CN/messages.json
+++ b/public/_locales/zh_CN/messages.json
@@ -174,5 +174,6 @@
 
 	"page_options_about": { "message": "关于" },
 	"page_options_about_author": { "message": "作者：" },
+    "page_options_about_changelog": { "message": "更新日志" },
 	"page_options_about_info": { "message": "灵感来自 The Great Suspender 扩展。" }
 }
