--- a/public/_locales/fr/messages.json
+++ b/public/_locales/fr/messages.json
@@ -174,5 +174,6 @@
 
 	"page_options_about": { "message": "À propos" },
 	"page_options_about_author": { "message": "Auteur :" },
+    "page_options_about_changelog": { "message": "Journal des modifications" },
 	"page_options_about_info": { "message": "Inspiré par l’extension The Great Suspender." }
 }
